<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>dubbodemo</artifactId>
        <groupId>com.yanr.rpc</groupId>
        <version>1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>systemA</artifactId>
    <packaging>war</packaging>

    <name>systemA Maven Webapp</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>


        <!-- ********************** tomcatPlugin ********************** -->
        <tomcatPlugin.port>8082</tomcatPlugin.port>

        <tomcatPlugin.artifactId>tomcat7-maven-plugin</tomcatPlugin.artifactId>
        <tomcatPlugin.version>2.2</tomcatPlugin.version>
        <tomcatPlugin.path>/</tomcatPlugin.path>
        <tomcatPlugin.uriEncoding>${project.build.sourceEncoding}</tomcatPlugin.uriEncoding>
        <tomcatPlugin.ignorePackaging>true</tomcatPlugin.ignorePackaging>
        <!-- Default value is: ${basedir}/src/main/webapp. -->
        <!-- User property is: tomcat.warSourceDirectory.. -->
        <tomcatPlugin.warSourceDirectory>${basedir}\src\main\webapp\</tomcatPlugin.warSourceDirectory>
        <tomcatPlugin.systemProperties.tomcatName>tomcat-${project.artifactId}</tomcatPlugin.systemProperties.tomcatName>
        <tomcatPlugin.systemProperties.JAVA_OPTS>-Xms256m -Xmx1024m -XX:MaxPermSize=256m</tomcatPlugin.systemProperties.JAVA_OPTS>
        <!-- <tomcatPlugin.systemProperties.webapp.root>${tomcatPlugin.warSourceDirectory}</tomcatPlugin.systemProperties.webapp.root> -->
    </properties>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>

        <!-- 采用spring配置方式使用dubbo，所以需要导入spring容器依赖-->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-webmvc</artifactId>
            <version>4.3.10.RELEASE</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>1.6.4</version>
        </dependency>

        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>dubbo</artifactId>
            <version>2.5.6</version>
            <!-- 排除传递spring依赖-->
            <exclusions>
                <exclusion>
                    <artifactId>spring</artifactId>
                    <groupId>org.springframework</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>spring-web</artifactId>
                    <groupId>org.springframework</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>spring-beans</artifactId>
                    <groupId>org.springframework</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>spring-context</artifactId>
                    <groupId>org.springframework</groupId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- lombock -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.16.16</version>
        </dependency>

        <!--zookeeper依赖-->
        <dependency>
            <groupId>org.apache.zookeeper</groupId>
            <artifactId>zookeeper</artifactId>
            <version>3.4.14</version>
            <!--<version>3.4.7</version>-->
        </dependency>

        <dependency>
            <groupId>com.github.sgroschupf</groupId>
            <artifactId>zkclient</artifactId>
            <version>0.1</version>
        </dependency>

    </dependencies>

    <build>
        <finalName>systemA</finalName>

        <plugins>
            <!-- tomcat插件 -->
            <plugin>
                <groupId>org.apache.tomcat.maven</groupId>
                <artifactId>${tomcatPlugin.artifactId}</artifactId>
                <version>${tomcatPlugin.version}</version>
                <configuration>
                    <hostName>localhost</hostName>        <!--   Default: localhost -->
                    <port>${tomcatPlugin.port}</port>                     <!-- 启动端口 Default:8080 -->
                    <path>${tomcatPlugin.path}</path>   <!-- 访问应用路径  Default: /${project.artifactId}-->
                    <uriEncoding>${tomcatPlugin.uriEncoding}</uriEncoding>      <!-- uri编码 Default: ISO-8859-1 -->
                    <warSourceDirectory>${tomcatPlugin.warSourceDirectory}</warSourceDirectory>
                    <systemProperties>
                        <tomcatName>${tomcatPlugin.systemProperties.tomcatName}</tomcatName>
                        <JAVA_OPTS>${tomcatPlugin.systemProperties.JAVA_OPTS}</JAVA_OPTS>
                    </systemProperties>
                </configuration>
            </plugin>

           <!--依赖的jar包copy到src/main/webapp/WEB-INF/lib文件夹下-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <type>jar</type>
                            <includeTypes>jar</includeTypes>
                            <outputDirectory>src/main/webapp/WEB-INF/lib</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- 编译插件，指定 JDK 的版本为1.8 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>


</project>
